add types/user.zig and plumb in into comments

--- a/templates/diff-review.html
+++ b/templates/diff-review.html
@@ -16,7 +16,7 @@
       <comments>
         <!-- comments -->
         <form method="POST" action="add-comment">
-          <context></context>
+          <context><!-- current_username ORNULL --></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
           <!-- form-data -->
