--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,5 +1,6 @@
       <li><a href="/repos">repos</a></li>
       <li><a href="/user">owner</a></li>
+      <li><a href="<!-- issueurl ORELSE /todo -->">issues</a><!-- issuecount ORNULL --></li>
       <li><a href="<!-- diffurl ORELSE /diffs -->">diffs</a><!-- diffcount ORNULL --></li>
       <li><a href="/network">network</a></li>
       <li><!-- header.auth --></li>
