add comments to commits

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -7,8 +7,9 @@
   <body>
     <!-- _body_header.html -->
     <content>
-      <!-- commits --> 
-      <!-- diff --> 
+      <!-- commits -->
+      <!-- comments -->
+      <!-- diff -->
     </content>
   </body>
 </html>
