don't use zig to build simple html

--- a/templates/actionable.html
+++ b/templates/actionable.html
@@ -7,9 +7,11 @@
   <body>
     <!-- _body_header.html -->
     <content>
-      <diff>
-        <!-- diff -->
-      </diff>
+      <search></search>
+      <actionable>
+      <!-- actionable_list -->
+      </actionable>
     </content>
   </body>
 </html>
+
