--- a/templates/repo.html
+++ b/templates/repo.html
@@ -7,7 +7,12 @@
   <body>
     <!-- _body_header.html -->
     <content>
+      <div class="act-btns">
+        <a class="btn" href="<!-- repo_name ORNULL -->/issues/new">New Issue</a>
+        <a class="btn" href="<!-- repo_name ORNULL -->/diffs/new">Suggest Diff</a>
+      </div>
       <!-- repo -->
       <!-- readme -->
+    </content>
   </body>
 </html>
