--- a/templates/actionable.html
+++ b/templates/actionable.html
@@ -7,7 +7,12 @@
   <body>
     <!-- _body_header.html -->
     <content>
-      <search></search>
+      <search>
+        <form action="search" method="POST">
+          <input name="name" type="text" placeholder="Search (not yet working)" />
+        </form>
+        <a class="btn" href="new">New</a>
+      </search>
       <actionable>
       <!-- actionable_list -->
       </actionable>
