--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -7,7 +7,7 @@
   <body>
     <!-- _body_header.html -->
     <content>
-        <form action="new" method="POST">
+        <form class="pretty" action="new" method="POST">
           <context>Suggest New Diff</context>
           <input name="diff source" placeholder="Patch URL" />
           <input name="title" placeholder="Diff Title" />
