--- a/templates/diff-review.html
+++ b/templates/diff-review.html
@@ -15,7 +15,7 @@
       <!-- patch -->
       <comments>
         <!-- comments -->
-        <form method="POST" action="add-comment">
+        <form class="pretty" action="add-comment" method="POST">
           <context><!-- current_username ORNULL --></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
