--- a/templates/issue-new.html
+++ b/templates/issue-new.html
@@ -7,7 +7,7 @@
   <body>
     <!-- _body_header.html -->
     <content>
-        <form action="new" method="POST">
+        <form class="pretty" action="new" method="POST">
           <context>Open New Issue</context>
           <input name="title" placeholder="Issue Title" />
           <textarea name="desc" placeholder="Additional information about this issue"></textarea>
