add after commit button to commits view

--- a/templates/commits.html
+++ b/templates/commits.html
@@ -8,6 +8,7 @@
     <!-- _body_header.html -->
     <content>
       <!-- commits -->
+      <!-- after ORNULL -->
     </content>
   </body>
 </html>
