--- a/templates/commits.html
+++ b/templates/commits.html
@@ -7,7 +7,19 @@
   <body>
     <!-- _body_header.html -->
     <content>
-      <!-- commits -->
+      <!-- FOREACH commits -->
+        <commit>
+          <data>
+            <a href="<!-- uri -->"><!-- sha --></a>
+            <br />
+            <!-- msg -->
+          </data>
+          <foot>
+          <author><!-- author --></author>
+            <span>parent <a href="<!-- parent_uri -->"><!-- parent --></a></span>
+          </foot>
+        </commit>
+      <!-- END !-->
       <!-- after ORNULL -->
     </content>
   </body>
