split commit messages

--- a/templates/commits.html
+++ b/templates/commits.html
@@ -11,6 +11,7 @@
         <commit>
           <data>
             <a href="<!-- uri -->"><!-- sha --></a>
+            <span><!-- msg_title ORNULL --></span>
             <br />
             <!-- msg -->
           </data>
