update issues html to use FOREACH

--- a/templates/issue.html
+++ b/templates/issue.html
@@ -9,7 +9,15 @@
     <content class="issue">
       <!-- issue -->
       <comments>
-        <!-- comments -->
+        <!-- FOREACH comments -->
+        <comment>
+          <context>
+          <author></author>
+          <date></date>
+        </context>
+        <message></message>
+        </comment>
+        <!-- END !-->
         <form class="pretty" action="add-comment" method="POST">
           <context><!-- current_username ORNULL --></context>
           <textarea name="comment"></textarea>
