refactor diffs to use delta.zig change wrapper

--- a/templates/issue.html
+++ b/templates/issue.html
@@ -12,10 +12,10 @@
         <!-- FOREACH comments -->
         <comment>
           <context>
-          <author></author>
-          <date></date>
+          <author><!-- author --></author>
+          <date><!-- date --></date>
         </context>
-        <message></message>
+        <message><!-- msg --></message>
         </comment>
         <!-- END !-->
         <form class="pretty" action="add-comment" method="POST">
