add context builder function
todo: change it to take an allocator so it can build for things other than a str

--- a/templates/deltalist.html
+++ b/templates/deltalist.html
@@ -18,12 +18,14 @@
         <row>
           <div>
             <div>
-              <span class="muted"><!-- index --></span>
+              <span class="muted"><!-- indexi --></span>
               <a href="<!-- title_uri -->"><!-- title --></a>
             </div>
-            <!-- comments -->
+            <!-- comments_icon -->
           </div>
-          <!-- desc ORNULL -->
+          <desc>
+            <!-- desc ORNULL -->
+          </desc>
         </row>
       <!-- END !-->
       </actionable>
