fix delta comment icon and index

--- a/templates/deltalist.html
+++ b/templates/deltalist.html
@@ -18,7 +18,7 @@
         <row>
           <div>
             <div>
-              <span class="muted"><!-- indexi --></span>
+              <span class="muted"><!-- index --></span>
               <a href="<!-- title_uri -->"><!-- title --></a>
             </div>
             <!-- comments_icon -->
