display comments on diffs

--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -14,7 +14,9 @@
     <content class="patch">
       <!-- patch -->
       <comments>
-        <!-- comments -->
+        <!-- FOREACH comments -->
+        <!-- _comment.html -->
+        <!-- END !-->
         <form class="pretty" action="add-comment" method="POST">
           <context><!-- current_username ORNULL --></context>
           <textarea name="comment"></textarea>
