fix delta issue rendering

--- a/templates/delta-issue.html
+++ b/templates/delta-issue.html
@@ -10,13 +10,7 @@
       <!-- issue -->
       <comments>
         <!-- FOREACH comments -->
-        <comment>
-          <context>
-          <author><!-- author --></author>
-          <date><!-- date --></date>
-        </context>
-        <message><!-- msg --></message>
-        </comment>
+        <!-- _comment.html -->
         <!-- END !-->
         <form class="pretty" action="add-comment" method="POST">
           <context><!-- current_username ORNULL --></context>
