move html from zig into html

--- a/templates/delta-issue.html
+++ b/templates/delta-issue.html
@@ -16,7 +16,7 @@
           <context><!-- current_username ORNULL --></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
-          <!-- form-data -->
+          <input type="hidden" name="did" value="<!-- delta_id -->" />
         </form>
       </comments>
     </content>
