--- a/templates/repo.html
+++ b/templates/repo.html
@@ -8,6 +8,7 @@
     <!-- _body_header.html -->
     <content>
       <div class="act-btns">
+        <a class="btn" href="<!-- repo_name ORNULL -->/commits">commits</a>
         <a class="btn" href="<!-- repo_name ORNULL -->/issues/new">New Issue</a>
         <a class="btn" href="<!-- repo_name ORNULL -->/diffs/new">Suggest Diff</a>
       </div>
