fix git msg title rendering for some commit views

--- a/templates/commits.html
+++ b/templates/commits.html
@@ -10,7 +10,7 @@
       <!-- FOREACH commits -->
         <commit>
           <data>
-            <a href="<!-- uri ORELSE # -->"><!-- sha --></a>
+            <a href="<!-- uri ORELSE # -->" class=muted><!-- sha --></a>
             <span><!-- msg_title ORNULL --></span>
             <br />
             <!-- msg -->
