add templates for blame

--- a/templates/blame.html
+++ b/templates/blame.html
@@ -8,9 +8,9 @@
     <!-- _body_header.html -->
     <content>
       <blob>
-      <a class="btn" href="/repo/<!-- repo -->/blame/<!-- uri_filename -->">blame</a>
+        <a class="btn" href="<!-- blame_uri ORNULL -->/blame">blame</a>
         <header><!-- filename --></header>
-        <!-- blob -->
+        <!-- blame -->
       </blob>
     </content>
   </body>
