make blame sha a link

--- a/templates/blame.html
+++ b/templates/blame.html
@@ -12,7 +12,7 @@
         <header><!-- filename --></header>
         <div class="code-block">
         <code>
-<!-- FOREACH blame_lines --><span class="blame-line"><span class="blame-header"><sha><!-- sha --></sha><author><!-- author --></author><time><!-- time ORNULL --></time></span><ln num="<!-- num -->" id="<!-- id -->" href="<!-- href -->"><!-- line --></ln></span><!-- END !-->
+<!-- FOREACH blame_lines --><span class="blame-line"><span class="blame-header"><sha><a href="/repo/<!-- repo_name -->/commit/<!-- sha -->"><!-- sha --></a></sha><author><!-- author --></author><time><!-- time ORNULL --></time></span><ln num="<!-- num -->" id="<!-- id -->" href="<!-- href -->"><!-- line --></ln></span><!-- END !-->
         </code>
         </div>
       </blob>
