--- a/templates/deltalist.html
+++ b/templates/deltalist.html
@@ -8,10 +8,10 @@
     <!-- _body_header.html -->
     <content>
       <search>
-        <form action="search" method="POST">
-          <input name="name" type="text" placeholder="Search (not yet working)" />
+        <form action="search" style="width:95%">
+          <input name="q" type="text" placeholder="Search (not yet working)" value="<!-- search ORNULL -->" style="width:97%">
         </form>
-        <a class="btn" href="new">New</a>
+        <a class="btn" href="new" style="width:5%">New</a>
       </search>
       <actionable>
       <!-- FOREACH list -->
