delete stale search warning

--- a/templates/deltalist.html
+++ b/templates/deltalist.html
@@ -8,8 +8,8 @@
     <!-- _body_header.html -->
     <content>
       <search>
-        <form action="search" style="width:95%">
-          <input name="q" type="text" placeholder="Search (not yet working)" value="<!-- search ORNULL -->" style="width:97%">
+        <form action="/search" style="width:95%">
+          <input name="q" type="text" placeholder="Search" value="<!-- search ORNULL -->" style="width:97%">
         </form>
         <a class="btn" href="new" style="width:5%">New</a>
       </search>
