refactor ctx to use request data constructor

--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -9,7 +9,7 @@
     <content>
         <form class="pretty" action="new" method="POST">
           <context>Suggest New Diff</context>
-          <input name="diff source" placeholder="Patch URL" />
+          <input name="patch_uri" placeholder="Patch URL" />
           <input name="title" placeholder="Diff Title" />
           <textarea name="desc" placeholder="Additional information about this patch suggestion"></textarea>
           <buttons>
