--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <!-- _body_header.html -->
-    <content class="patch">
+    <content class="diff">
       <patchheader>
         <!-- patch_header -->
+        <patch>
+          <!-- patch -->
+        </patch>
       </patchheader>
-    </content>
-    <content class="patch">
-      <!-- patch -->
+
       <comments>
         <!-- FOREACH comments -->
         <!-- _comment.html -->
