Update templating system to use React/Vue style HTML

--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -1,7 +1,7 @@
 <comment>
   <context>
-    <!-- author -->
-    <date><!-- date --></date>
+    <Author>
+    <date><Date></date>
   </context>
-  <message><!-- message --></message>
+  <message><Message></message>
 </comment>
