--- a/templates/blame.html
+++ b/templates/blame.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
       <blob>
-        <a class="btn" href="<!-- blame_uri ORNULL -->/blame">blame</a>
-        <header><!-- filename --></header>
+        <a class="btn" href="<Blame_uri ORNULL>/blame">blame</a>
+        <header><Filename></header>
         <div class="code-block">
         <code>
-<!-- FOREACH blame_lines --><span class="blame-line"><span class="blame-header"><sha><a href="/repo/<!-- repo_name -->/commit/<!-- sha -->"><!-- sha --></a></sha><author><!-- author --></author><time><!-- time ORNULL --></time></span><ln num="<!-- num -->" id="<!-- id -->" href="<!-- href -->"><!-- line --></ln></span><!-- END !-->
+<For Blame_lines><span class="blame-line"><span class="blame-header"><Sha><a href="/repo/<Repo_name>/commit/<Sha>"><Sha></a></sha><author><Author></author><time><Time ORNULL></time></span><ln num="<Num>" id="<Id>" href="<Href>"><Line></ln></span></For>
         </code>
         </div>
       </blob>
