--- a/templates/blob.html
+++ b/templates/blob.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
       <blob>
-      <a class="btn" href="/repo/<!-- repo -->/blame/<!-- uri_filename -->">blame</a>
-        <header><!-- filename --></header>
-        <!-- blob -->
+      <a class="btn" href="/repo/<Repo>/blame/<Uri_filename>">blame</a>
+        <header><Filename></header>
+        <Blob>
       </blob>
     </content>
   </body>
