--- a/templates/code.html
+++ b/templates/code.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
-      <lines><!-- lines --></lines>
-      <code><!-- code --></code>
+      <lines><Lines></lines>
+      <code><Code></code>
     </content>
   </body>
 </html>
