--- a/templates/commit.html
+++ b/templates/commit.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
-      <!-- commits -->
-      <!-- comments -->
-      <!-- diff -->
+      <Commits>
+      <Comments>
+      <Diff>
     </content>
   </body>
 </html>
