--- a/templates/deltalist.html
+++ b/templates/deltalist.html
@@ -2,32 +2,32 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
       <search>
         <form action="/search" style="width:95%">
-          <input name="q" type="text" placeholder="Search" value="<!-- search ORNULL -->" style="width:97%">
+          <input name="q" type="text" placeholder="Search" value="<Search ORNULL>" style="width:97%">
         </form>
         <a class="btn" href="new" style="width:5%">New</a>
       </search>
       <actionable>
-      <!-- FOREACH list -->
+      <For List>
         <row>
           <div>
             <div>
-              <span class="muted"><!-- index --></span>
-              <a href="<!-- title_uri -->"><!-- title --></a>
+              <span class="muted"><Index></span>
+              <a href="<Title_uri>"><Title></a>
             </div>
-            <!-- comments_icon -->
+            <Comments_icon>
           </div>
           <desc>
-            <!-- desc ORNULL -->
+            <Desc ORNULL>
           </desc>
         </row>
-      <!-- END !-->
+        </For>
       </actionable>
     </content>
   </body>
