--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
-    <!-- flexes -->
+    <Flexes>
     </content>
   </body>
 </html>
