--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
         <form class="pretty" action="new" method="POST">
           <context>Suggest New Diff</context>
