--- a/templates/repo.html
+++ b/templates/repo.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>srctree</title>
-    <!-- _meta_head.html -->
+    <_meta_head.html>
   </head>
   <body>
-    <!-- _body_header.html -->
+    <_body_header.html>
     <content>
       <div class="act-btns">
-        <a class="btn" href="<!-- repo_name ORNULL -->/commits">commits</a>
-        <a class="btn" href="<!-- repo_name ORNULL -->/issues/new">New Issue</a>
-        <a class="btn" href="<!-- repo_name ORNULL -->/diffs/new">Suggest Diff</a>
+        <a class="btn" href="<Repo_name ORNULL>/commits">commits</a>
+        <a class="btn" href="<Repo_name ORNULL>/issues/new">New Issue</a>
+        <a class="btn" href="<Repo_name ORNULL>/diffs/new">Suggest Diff</a>
       </div>
-      <!-- repo -->
-      <!-- readme -->
+      <Repo>
+      <Readme>
     </content>
   </body>
 </html>
