--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -8,6 +8,16 @@
     <_body_header.html>
     <content>
     <Flexes>
+    <For Months>
+      <div class="flex-month">
+        <intro>
+          <Month>
+        </intro>
+        <For Rows>
+          <Line>
+        </For>
+      </div>
+    </For>
     </content>
   </body>
 </html>
