add super basic user journal

--- a/static/main.css
+++ b/static/main.css
@@ -575,6 +575,12 @@ blob {
 	}
 }
 
+journal {
+	display: flex;
+	justify-content: space-between;
+
+}
+
 .commit-flex {
 	width: 1050px;
 	margin: auto;
