--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -14,7 +14,10 @@
           <Month>
         </intro>
         <For Rows>
-          <Line>
+          <journal>
+          <span><Name> wrote a commit in <Repo> on <Date></span>
+          <span><Sha></span>
+          </journal>
         </For>
       </div>
     </For>
