--- a/static/main.css
+++ b/static/main.css
@@ -57,7 +57,7 @@ header {
 	}
 	a {
 		font-size: 108%;
-		padding: 0 1em;
+		padding: 0 1rem;
 		border-bottom: #7a003f solid 2px;
 		border-radius: 0 0 2px 2px;
 	}
@@ -65,7 +65,7 @@ header {
 		display: flex;
 		justify-content: space-between;
 		> li {
-			padding: 0 1em;
+			padding: 0 0.3rem;
 		}
 	}
 }
