update commit flex to use new html template

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -7,7 +7,25 @@
   <body>
     <_body_header.html>
     <content>
-    <Flexes>
+      <h3><Total_hits> commits across <Checked_repos> repos!</h3>
+      <div class="commit-flex">
+        <!--For Flexes_-->
+        <div class="day-col">
+          <div class="day">&nbsp;</div>
+          <div class="day">Sun</div>
+          <div class="day">Mon</div>
+          <div class="day">Tue</div>
+          <div class="day">Wed</div>
+          <div class="day">Thr</div>
+          <div class="day">Fri</div>
+          <div class="day">Sat</div>
+        </div>
+        <Flexes>
+
+        <!--For-->
+
+      </div>
+
     <For Months>
       <div class="flex-month">
         <intro>
