group activity journal by time

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -29,7 +29,7 @@
     <For Months>
       <div class="flex-month">
         <intro>
-          <Month>
+          <Group>
         </intro>
         <For Rows>
           <journal>
