added count hint for journal

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -31,6 +31,7 @@
         <intro>
           <Group>
         </intro>
+        <Lead ORNULL>
         <For Rows>
           <journal>
           <span><Name> wrote a commit in <Repo> on <Date></span>
