replace generic msg with commit title

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -34,8 +34,9 @@
         <Lead ORNULL>
         <For Rows>
           <journal>
-          <span><Name> wrote a commit in <Repo> on <Date></span>
-          <span><Sha></span>
+          <span><Title></span>
+          <span>in <Repo> on <Date></span>
+          <!--span><Sha></span-->
           </journal>
         </For>
       </div>
