--- a/static/main.css
+++ b/static/main.css
@@ -636,16 +636,14 @@ journal {
 .flex-month {
 	border: 1px solid gray;
 	display: block;
-	margin: 2rem 0 10rem;
+	margin: 2rem 0 1rem;
 	border-radius: 4px 4px 0 0;
 	intro {
-		border-radius: 4px 4px 0 0;
-		padding: 10px;
+		border-radius: 2px 2px 0 0;
+		padding: 0 10px;
 		background: #333;
 		display: flex;
 		justify-content: space-between;
-		align-items: baseline;
-		text-align: left;
 	}
 
 }
