fix bug in commit history search

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -32,7 +32,7 @@
         <Lead ORNULL>
         <For Rows>
           <journal>
-          <span><Title></span>
+          <span><Sha>: <Title></span>
           <span>in <Repo> on <Date></span>
           <!--span><Sha></span-->
           </journal>
