--- a/templates/tree.html
+++ b/templates/tree.html
@@ -8,6 +8,7 @@
     <_body_header.html>
     <content>
       <div class="act-btns">
+        <a href="<Upstream_URI ORNULL>"><Upstream></a>
         <a class="btn" href="<Repo_name ORNULL>/commits">commits</a>
         <a class="btn" href="<Repo_name ORNULL>/issues/new">New Issue</a>
         <a class="btn" href="<Repo_name ORNULL>/diffs/new">Suggest Diff</a>
