add some padding to journal

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -32,9 +32,12 @@
         <Lead ORNULL>
         <For Rows>
           <journal>
-          <span><Sha>: <Title></span>
-          <span>in <Repo> on <Date></span>
-          <!--span><Sha></span-->
+            <span><Sha>: <Title></span>
+            <span>
+              <span>in <Repo></span>
+              <span>on <Date></span>
+            </span>
+            <!--span><Sha></span-->
           </journal>
         </For>
       </div>
