--- a/static/main.css
+++ b/static/main.css
@@ -640,7 +640,7 @@ journal {
 	border-radius: 4px 4px 0 0;
 	intro {
 		border-radius: 2px 2px 0 0;
-		padding: 0 10px;
+		padding: 2px 6px;
 		background: #333;
 		display: flex;
 		justify-content: space-between;
