--- a/static/main.css
+++ b/static/main.css
@@ -114,7 +114,7 @@ code {
 	.blame-line {
 		display: block;
 		.blame-header {
-			sha { 
+			sha {
 				width: 5em;
 				display: inline-block;
 			}
@@ -567,7 +567,7 @@ blob {
 		height: 1.5em;
 		padding: 4px 12px;
 	}
-	.code-block { 
+	.code-block {
 		padding: 4px 12px;
 		border: 1px gray solid;
 		border-bottom: 0px;
@@ -578,7 +578,10 @@ blob {
 journal {
 	display: flex;
 	justify-content: space-between;
-	span { padding: 0 0.3rem; }
+	border-bottom: 1px solid gray;
+	margin: 0 0.2rem;
+	padding: 2px 0 1px;
+	span { padding: 0 0 0 0.3rem; }
 }
 
 .commit-flex {
@@ -634,16 +637,13 @@ journal {
 
 
 .flex-month {
-	border: 1px solid gray;
 	display: block;
 	margin: 2rem 0 1rem;
-	border-radius: 4px 4px 0 0;
 	intro {
-		border-radius: 2px 2px 0 0;
-		padding: 2px 6px;
+		padding: 2px 0;
 		background: #333;
-		display: flex;
-		justify-content: space-between;
+		width: 100%;
+		display: inline-block;
 	}
 
 }
