abstract opengraph and other template defaults

--- a/templates/_meta_head.html
+++ b/templates/_meta_head.html
@@ -1,5 +1,7 @@
     <link href="/static/main.css" rel="stylesheet">
     <link href="/static/icons.css" rel="stylesheet">
+    <With OpenGraph>
     <meta property="og:site_name" content="srctree: code sharing">
-    <meta property="og:title" content="<OGTitle ORELSE srctree>">
-    <meta property="og:description" content="<OGDesc ORELSE Making git distributed since 2023>">
+    <meta property="og:title" content="<Title ORELSE srctree>">
+    <meta property="og:description" content="<Desc ORELSE Making git distributed since 2023>">
+    </With>
