--- a/templates/tree.html
+++ b/templates/tree.html
@@ -8,7 +8,9 @@
     <_body_header.html>
     <content>
       <div class="act-btns">
-        <a href="<Upstream_URI ORNULL>"><Upstream></a>
+        <With Upstream>
+        <a class="btn" href="<URI>">Go To Upstream</a>
+        </With>
         <a class="btn" href="<Repo_name ORNULL>/commits">commits</a>
         <a class="btn" href="<Repo_name ORNULL>/issues/new">New Issue</a>
         <a class="btn" href="<Repo_name ORNULL>/diffs/new">Suggest Diff</a>
