--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,6 +1,7 @@
       <li><a href="/repos">repos</a></li>
       <li><a href="/user">owner</a></li>
-      <li><a href="<Issueurl ORELSE /todo>">issues</a><Issuecount ORNULL></li>
-      <li><a href="<Diffurl ORELSE /diffs>">diffs</a><Diffcount ORNULL></li>
       <li><a href="/network">network</a></li>
+      <For Header.Nav>
+      <li><a href="<Url>"><Name></a><Extra ORNULL></li>
+      </For>
       <li><Header.auth></li>
