--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,6 +2,6 @@
       <li><a href="/user">owner</a></li>
       <li><a href="/network">network</a></li>
       <For Header.Nav>
-      <li><a href="<Url>"><Name></a><Extra ORNULL></li>
+      <li><a href="<Url>"><Name><sup><Extra ORNULL></sup></a></li>
       </For>
       <li><Header.auth></li>
