--- a/templates/commit.html
+++ b/templates/commit.html
@@ -7,8 +7,26 @@
   <body>
     <_body_header.html>
     <content>
-      <Commits>
+      <With Commit>
+        <commit>
+          <top>
+            <author><Author></author>
+            <span>parent <a href="<Parent_URI>"><Parent_Sha_Short></a></span>
+          </top>
+          <data>
+            <a href="<Sha_URI>"><Sha_Short></a><br>
+            <Title><br><br>
+            <Body>
+          </data>
+        </commit>
+      </With>
+
+      <For Comments_>
+      </For>
       <Comments>
+      
+      <For Files>
+      </For>
       <Diff>
     </content>
   </body>
