improve ergonomics of commit comments and delta

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -21,9 +21,9 @@
         </commit>
       </With>
 
-      <For Comments_>
+      <For Comments>
+        <_comment.html>
       </For>
-      <Comments>
       
       <For Files>
       </For>
