actually render the patch

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -21,13 +21,22 @@
         </commit>
       </With>
 
-      <For Comments>
-        <_comment.html>
-      </For>
-      
-      <For Files>
-      </For>
-      <Diff>
+      <!--For Comments> Commented out while I figure out how to parse XML :< -->
+        <!-- _comment.html-->
+      <!-- /For-->
+      <!-- comments -->
+
+      <diff>
+        <patch>
+          <For Files>
+            <DiffStat>
+            <Filename>
+            <changes>
+              <Diff ORELSE Missing>
+            </changes>
+          </For>
+        </patch>
+      </diff>
     </content>
   </body>
 </html>
