--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -7,7 +7,7 @@
   <body>
     <_body_header.html>
     <content>
-      <h3><Total_hits> commits across <Checked_repos> repos!</h3>
+      <h3><TotalHits> commits across <CheckedRepos> repos!</h3>
       <div class="commit-flex">
         <!--For Flexes_-->
         <div class="day-col">
@@ -22,6 +22,7 @@
         </div>
         <Flexes>
 
+        <h3 style="float: right"><CurrentStreak></h3>
       </div>
 
     <For Months>
