--- a/templates/blame.html
+++ b/templates/blame.html
@@ -12,7 +12,7 @@
         <header><Filename></header>
         <div class="code-block">
         <code>
-<For Blame_lines> <span class="blame-line"> <span class="blame-header"> <a href="/repo/<Repo_name>/commit/<Sha>"><Sha>&nbsp;</a><author><Author></author><time><Time ORNULL></time></span><ln num="<Num>" id="<Id>" href="<Href>"><Line></ln></span></For>
+<For Blame_lines> <span class="blame-line"> <span class="blame-header"><a href="/repo/<Repo_name>/commit/<Sha>"><Sha>&nbsp;</a><author><a href="<AuthorEmail ORNULL>"><Author></a></author><time><Time ORNULL></time></span><ln num="<Num>" id="<Id>" href="<Href>"><Line></ln></span></For>
         </code>
         </div>
       </blob>
