fix commit view to display filename changes
I should probably write a test for this, but I *should* do a lot of
things...

worked on srctree.gr.ht/repo/n_e_s.git/commit/62773914

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -29,10 +29,10 @@
       <diff>
         <patch>
           <For Files>
-            <DiffStat>
-            <Filename>
+            <Filename ORELSE "No Filename found">
+            <DiffStat ORELSE "Data missing">
             <changes>
-              <Diff ORELSE Missing>
+              <Diff ORELSE "Missing">
             </changes>
           </For>
         </patch>
