wrap commit file name in header

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -29,8 +29,10 @@
       <diff>
         <patch>
           <For Files>
+          <header>
             <Filename ORELSE "No Filename found">
             <DiffStat ORELSE "Data missing">
+          </header>
             <changes>
               <Diff ORELSE "Missing">
             </changes>
