--- a/templates/commit.html
+++ b/templates/commit.html
@@ -21,23 +21,12 @@
         </commit>
       </With>
 
-      <!--For Comments> Commented out while I figure out how to parse XML :< -->
-        <!-- _comment.html-->
-      <!-- /For-->
-      <!-- comments -->
+      <For Comments>
+      <_comment.html>
+      </For>
 
       <diff>
-        <patch>
-          <For Files>
-          <header>
-            <Filename ORELSE "No Filename found">
-            <DiffStat ORELSE "Data missing">
-          </header>
-            <changes>
-              <Diff ORELSE "Missing">
-            </changes>
-          </For>
-        </patch>
+      <_patch.html>
       </diff>
     </content>
   </body>
