--- a/templates/commit.html
+++ b/templates/commit.html
@@ -11,7 +11,7 @@
         <commit>
           <top>
             <author><Author></author>
-            <span>parent <a href="<Parent_URI>"><Parent_Sha_Short></a></span>
+            <span>parent <For Parents><a href="<Parent_URI>"><Parent_Sha_Short></a> </For></span>
           </top>
           <data>
             <a href="<Sha_URI>"><Sha_Short></a><br>
