POC for reading settings

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -7,7 +7,14 @@
   <body>
     <_body_header.html>
     <content>
-      <Form>
+      <form method="POST"> 
+        <label>Test</label>
+        <input name="default" />
+        <br>
+        <label>config.ini</label>
+        <textarea cols="100" rows="50"><ConfigTxt ORNULL></textarea>
+      </form>
+
     </content>
   </body>
 </html>
