split settings into namespace blocks
I'm not exactly stoked with this, but I can't decide what the end state
should be.

calls to initMap will leak

--- a/static/main.css
+++ b/static/main.css
@@ -505,7 +505,7 @@ form.pretty {
 	textarea { height: 10em }
 }
 
-input {
+input, textarea {
 	padding: 10px;
 	background: #222;
 	border: 1px solid gray;
