--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -33,9 +33,9 @@
         <Lead ORNULL>
         <For Rows>
           <journal>
-            <span><Sha>: <Title></span>
+            <span><a href="/repo/<Repo>/commit/<Sha>"><Sha></a>: <Title></span>
             <span>
-              <span>in <Repo></span>
+              <span>in <a href="/repo/<Repo>"><Repo></a></span>
               <span>on <Date></span>
             </span>
             <!--span><Sha></span-->
