add crash note for failed git agent calls

--- a/templates/5XX.html
+++ b/templates/5XX.html
@@ -10,11 +10,16 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </head>
 <body>
 <h1>Task Failed Successfully!</h1>
-<p>The git repo you're looking for is in another castle :(<br/>
-Please try again repeatedly... surely it'll work this time!</p>
+<p>The server started working on your request, but then it died. Which is
+really weird, because it was so full of life just the other day!</p>
+<p> This crash wasn't your fault... but I'm still probably gonna blame you.
+<br/>Sorry about that!</p>
+<p>You can try again repeatedly... But it'll probably crash again, and then
+that's just more blame for you! Is that a risk you're willing to take?!</p>
 <p>If you are the system administrator you should already know why <br/>
 it's broken what are you still reading this for?!</p>
-<p><em>Faithfully yours, Geoff from Accounting.</em></p>
+<p><ErrorString ORNULL></p>
+<p><em>Never in your debt, Aye-Aye-Ron from Human Resources.</em></p>
 </body>
 </html>
 
