add typed templates
currently broken because it's non-recursive but it does work

--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -1,11 +1,11 @@
 	<For Files>
         <patch>
           <header>
-            <Filename ORELSE "No Filename found">
-	    <strong><DiffStat ORELSE "Diff Stat Missing"></strong>
+            <Filename ORELSE No Filename found>
+	    <strong><DiffStat ORELSE Diff Stat Missing></strong>
           </header>
           <changes>
-            <Diff ORELSE "Missing">
+            <Diff ORELSE Missing>
           </changes>
         </patch>
         </For>
