--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,7 +1,7 @@
       <li><a href="/repos">repos</a></li>
       <li><a href="/user">owner</a></li>
       <li><a href="/network">network</a></li>
-      <For Header.Nav>
+      <For NavButtons>
       <li><a href="<Url>"><Name><sup><Extra ORNULL></sup></a></li>
       </For>
-      <li><Header.auth></li>
+      <li><NavAuth></li>
