return gist content when requested

--- a/templates/gist.html
+++ b/templates/gist.html
@@ -7,7 +7,14 @@
   <body>
     <_body_header.html>
     <content>
-      <GistBody>
+      <For GistFiles>
+        <blob>
+        <header><FileName ORNULL></header>
+        <code>
+          <FileBlob ORNULL>
+        </code>
+        </blob>
+      </For>
     </content>
   </body>
 </html>
