update repo list to typed format

--- a/templates/repos.html
+++ b/templates/repos.html
@@ -7,7 +7,17 @@
   <body>
     <_body_header.html>
     <content>
-      <Repos>
+      <With Buttons><Buttons></With>
+      <repos>
+      <For RepoList>
+        <repo>
+          <name><a href="<Uri>"><Name></a></name>
+            <desc><Desc ORNULL><p class="upstream"><Upstream ORNULL></p>
+            <span class="updated"><Updated></span>
+          </desc><last></last>
+        </repo>
+      </For>
+      </repos>
     </content>
   </body>
 </html>
