partial conversion of repo view to typed

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -16,7 +16,7 @@
         <a class="btn" href="<Repo_name ORNULL>/diffs/new">Suggest Diff</a>
       </div>
       <Repo>
-      <Readme>
+      <Readme ORNULL>
     </content>
   </body>
 </html>
