--- a/templates/repos.html
+++ b/templates/repos.html
@@ -13,7 +13,7 @@
         <repo>
           <name><a href="<Uri>"><Name></a></name>
             <desc><Desc ORNULL><p class="upstream"><Upstream ORNULL></p>
-            <span class="updated"><Updated></span>
+            <div class="updated"><span><Updated></span><With Tag><a href="<Uri>" title="<Title>"><Tag></a></With></div>
           </desc><last></last>
         </repo>
       </For>
