half convert diff view to typed format

--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -7,12 +7,14 @@
   <body>
     <_body_header.html>
     <content class="diff">
+      <With Patch>
       <patchheader>
-        <Patch_header>
+        <Header>
         <patch>
-          <Patch>
+          <Data>
         </patch>
       </patchheader>
+      </With>
 
       <comments>
         <For Comments>
