partial migration of diff template to typed page

--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -8,12 +8,8 @@
     <_body_header.html>
     <content class="diff">
       <With Patch>
-      <patchheader>
         <Header>
-        <patch>
-          <Data>
-        </patch>
-      </patchheader>
+        <_patch.html>
       </With>
 
       <comments>
