fix diff display

--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -5,7 +5,8 @@
 	    <strong><DiffStat ORELSE Diff Stat Missing></strong>
           </header>
           <changes>
-            <Diff ORELSE Missing>
+            <ForRow DiffLines>
+</ForRow>
           </changes>
         </patch>
         </For>
