--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -7,10 +7,14 @@
   <body>
     <_body_header.html>
     <content class="diff">
+      <context>
       <With Patch>
         <Header>
+        <diff>
         <_patch.html>
+        </diff>
       </With>
+      </context>
 
       <comments>
         <For Comments>
